--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -5,6 +5,8 @@ Project-related news (newest items at the top)...
 
 *27 April 2011:*
   * This was just brought to my attention: [http://angrycoding.blogspot.com/2011/04/recreating-google-code-wiki-with.html an article about using wikiwym and adding code-block syntax highlighting]
+  * The hash (`#`) and forward-slash (`/`) characters are now legal first characters for wiki-word links.
+  * The past week we've introduced several fixes/improvements in the space- and newline handling.
 
 
 *13 May 2010:*
