--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -1,68 +1,54 @@
-#summary How to use wikiwym in your web pages
+#summary The main page
+#labels Featured
 
-<wiki:toc max_depth='3'></wiki:toc>
+= Introduction =
 
-= Adding wikiwym to a Web Page =
+Wikiwym is wiki syntax parser, implemented in !JavaScript, which tries to reasonably imitate the Google Code wiki format.
 
-It's really, really easy....
+*Code status:* "It essentially works." See [SupportedWikiSyntax] for examples of what works and what doesn't.
 
-First, include the !JavaScript code in your HTML page:
+*License:* MIT
 
-{{{
-<script type="text/javascript" src="http://wikiwym.googlecode.com/svn/branches/stable/lib/GoogleCodeWikiParser.js"></script>
-}}}
+*Primary Features:*
 
-If you want the wikified source code blocks to have syntax highlighting  then you need this (3rd-party) pretty-printing code (or something equivalent):
+  * Fairly Small. The core parser lives in one file and has no external dependencies.
+  * It is not based on regular expressions. For the most part it scans char-by-char, so it is more robust in handling things like nested markup (e.g. _*italicized bold*_) than regex-based implementations.
+  * Can handle "most" Google Code wiki markup.  See [SupportedWikiSyntax] for what we believe works.
+  * The main parser code has a one-class, one-function interface, so it's easy to use.
+  * In some ways it's a better Google Code wiki parser than Google Code's wiki parser, as it can handle certain "strange, yet legal" linking constructs which !GoCoWi doesn't natively handle.
 
-{{{
-<script type="text/javascript" src="http://wikiwym.googlecode.com/svn/branches/stable/lib/prettify/prettify.js"></script>
+*Primary Misfeatures:*
 
-<link type='text/css' href="http://wikiwym.googlecode.com/svn/branches/stable/lib/prettify/prettify.css"/>
-}}}
+  * Certain wiki markup is not supported. See [SupportedWikiSyntax].
+  * "Inline" markup (bold, italics, etc. i.e. all markup which is not for block-level items) is only processed within a single line. And i'm not 100% sure we have the same meaning of "end of line" as !GoCo does.
+  * There are not yet many configurable options. Use it as-is or hack it to suit.
 
-Note the word `stable` in the paths shown above. If you want the _latest_ code, replace `branches/stable` with `trunk`. But since any commit in the trunk branch might be broken and might not get fixed quickly, we _strongly recommend_ that clients pull from the `stable` branch.
+= Getting and Installing =
 
-In your !JavaScript it can then be used like this:
+  * Download the parser (a single file) from our source repo:
+    * [http://wikiwym.googlecode.com/svn/branches/stable/lib/GoogleCodeWikiParser.js stable branch]
+    * [http://wikiwym.googlecode.com/svn/trunk/lib/GoogleCodeWikiParser.js latest branch]
+  * Include it in your HTML page.
 
-{{{
-var p = new GoogleCodeWikiParser();
-var html = p.parse("_*Hi, world*_");
-}}}
+You are of course free to "minimize" the source code using a minimizer of your choice, e.g. [http://www.crockford.com/javascript/jsmin.html Douglas Crockford's jsmin]. As of this writing (20100513), minimizing alone reduces the size by about 2/3rds. Compressing it using one of the common JS packers can reduce it by about 70-75%. Compressing it with gzip (or serving it from a server which supports such output compression), without minimizing/packing it first, provides only slightly smaller results than minimization, but can halve the size of a minified/packed copy. In my tests, the best reduction is obtained by combining minification and gzip (this is also more performant, as it requires no unpacking in the client JS engine).
 
-That would produce this HTML:
+The source tree [http://code.google.com/p/wikiwym/source/browse/#svn/trunk/pack contains utility code for packing/minifying the parser].
 
-  _*Hi, world*_
+=Ultra-mini HOWTO=
 
-The output would normally be added to a DOM element. For example, if using jQuery we can replace the contents of a given DOM element with wikified content by doing something like this:
-
-{{{
-jQuery('#myContent', p.parse(...) );
-}}}
-
-
-If you are using the pretty-print code then you need to run the following _after adding the parsed content to your DOM_:
+The source tree has several files, in various stages of completion. The core parser code is in [http://code.google.com/p/wikiwym/source/browse/trunk/lib/GoogleCodeWikiParser.js GoogleWikiCodeParser.js], and is used like this:
 
 {{{
-prettyPrint();
+var g = new GoogleWikiCodeParser();
+var html = g.parse( " ... wiki markup code ..." );
 }}}
 
-Every time new parsed content is added to the DOM, `prettyPrint()` must be called in order to process the results. If you do not do this then the code blocks will not get syntax-highlighted.
+To see various live demos, visit out demo page:
 
-=Using wikiwym without a Browser=
+  * [http://fossil.wanderinghorse.net/demos/wikiwym/]
 
-The wikiwym parser is not dependent on a browser environment and thus can be used from arbitrary !JavaScript engines which support loading external files, e.g. Mozilla Rhino or one of the shells based on Google v8. Usage is unchanged in non-browser environments, but how the script is loaded depends on the engine/shell being used. Non-browser apps will probably need to customize the link generation so that they can behave properly when wiki-generated links are activated. See the next section...
+From there you can preview any Google Code-hosted project's wiki pages using our online preview tool.
 
-=Customizing Link Generation=
+=Related Works=
 
-If you need to customize how the parser generates links (e.g. so that you can add logic to make your app respond sensibly to intra-wiki links), you can override its `createLink()` member like this:
-
-{{{
-// Approach #1: globally replace the createLink() member:
-GoogleCodeWikiParser.prototype.createLink = function(where,label) {
-  // see the original implementation for how this
-  // function should behave.
-};
-
-// Approach #2: replace createLink() for a single instance:
-p.createLink = function(where,label) { ... }
-}}}
+  * [http://remysharp.com/2008/04/01/wiki-to-html-using-javascript/], by Remy Sharp, supports a !MediaWiki-like wiki syntax.
